# SimpleIOCPProject

GameClient/: .gitignore  CMakeLists.txt  GameClient.sln
GameClient/GameClient/: Entity.h  EntityManager.cpp  EntityManager.h  GameClient.vcxproj  GameClient.vcxproj.filters  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  Player.cpp  Player.h  Singleton.h  main.cpp  pch.h  types.h
GameClient/src/: main.cpp  pch.h
GameClient/src/SingletonClass/: Singleton.cpp  Singleton.h
